<resources>
    <string name="app_name">NanoPlayBoard</string>
    <string name="menu_bluetooth_connect">Connect Bluetooth</string>
    <string name="menu_bluetooth_disconnect">Disconnect from Bluetooth</string>
    <string name="bluetooth_status_disconnected">Bluetooth device disconnected</string>
    <string name="bluetooth_status_failed">Connection has failed</string>
    <string name="bluetooth_status_connected">"Connected to "</string>
    <string name="bluetooth_status_not_enabled">Bluetooth was not enabled</string>
    <string name="mqtt_broker_url">Broker URL</string>
    <string name="mqtt_password">Password (optional)</string>
    <string name="mqtt_port">Port (default 1883)</string>
    <string name="mqtt_button_publish">Publish</string>
    <string name="mqtt_username">Username (optional)</string>
    <string name="mqtt_topic_publish">Topic Publish</string>
    <string name="mqtt_radiobutton_ldr">LDR</string>
    <string name="mqtt_radiobutton_potentiometer">Potentiometer</string>
    <string name="mqtt_toggle_publish_off">PUBLISH - OFF</string>
    <string name="mqtt_toggle_publish_on">PUBLISH - ON</string>
    <string name="mqtt_error_broker_url">Broker URL is a mandatory field</string>
    <string name="mqtt_error_topic_publish">Topic Publish is a mandatory field</string>
    <string name="mqtt_error_connect">Error trying to connect to MQTT broker</string>
    <string name="mqtt_successful_connection">Successful connection!</string>
    <string name="saved_mqtt_publish_broker_url">mqtt_broker_url</string>
    <string name="saved_mqtt_publish_port">mqtt_port</string>
    <string name="saved_mqtt_publish_topic">mqtt_topic_publish</string>
    <string name="potentiometer_contentdescription">Potentiometer</string>
    <string name="ldr_contentdescription">LDR</string>
</resources>
